# pttools

./: .clocignore  .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  AUTHORS  Bubbletoolbox  CITATION.cff  Dockerfile  LICENSE  README.md  __init__.py  bitbucket-pipelines.yml  clean_output.sh  cloc.sh  codemeta.json  conftest.py  environment-old.yml  environment.yml  gen_call_graphs.sh  index.html  install_requirements.sh  pyproject.toml  remove_empty_logs.sh  requirements-dev.txt  requirements-old.txt  requirements.txt  setup.cfg
.github/workflows/: deploy-docker.yml  deploy-pypi.yml  deploy-shf.yml  deploy.yml  docs.yml  mac.yml  main.yml  remove-old-artifacts.yml  windows.yml
bubble/: README.txt  bubble.py  kappa_vw_plot.py  shell_plot.py  shell_plot_alpha_n.py
code_bits/: Bag_Toolbox.py  EIKR_Toolbox.py  EIKR_Toolbox_Rewrite.py  Toolbox.py  bubble.py  findTminus.py  shell_plot.py  thermal_toolbox.py
docs/: Makefile  acknowledgements.rst  conf.py  dev.rst  history.rst  index.rst  install.rst  requirements.txt  usage.rst
docs/_templates/: module.rst
docs/fig/: compare_models.py  const_cs.py  const_cs_model.py  const_cs_p.py  const_cs_s.py  const_cs_xi_v.py  const_cs_xi_v_w.py  full_model.py  geff.py  potential.py  relativistic_combustion.py  standard_model.py  standard_model_2.py  standard_model_mod.py  thermo.py  v_chapman_jouguet.py  vm_vp_plane.py  xi_v_plane.py
docs/modules/: analysis.rst  bubble.rst  index.rst  misc.rst  models.rst  omgw0.rst  speedup.rst  ssmtools.rst
examples/: GALLERY_HEADER.rst  README.rst  __init__.py  const_cs_find.py  const_cs_gw.py  const_cs_testing.py  delta_theta.py  giese_comparison.py  giese_lisa_fig2.py  giese_testing.py  giese_testing2.py  giese_testing3.py  noise.py  parallel.py  plot_bag.py  plot_chapman_jouguet.py  plot_const_cs.py  plot_const_cs_xi_v.py  plot_const_cs_xi_v_w.py  plot_delta_theta.py  plot_entropy.py  plot_giese_bubble.py  plot_ke_frac.py  plot_model_comparison.py  plot_old_new.py  plot_reference_props.py  plot_spectra.py  plot_standard_model.py  plot_standard_model_xi_v.py  plot_w_by_w.py  plot_xi_kappa.py  plot_xi_kappa_bag.py  utils.py  vm_vp_plane.py
examples/01-basic/: parallel.py  plot_const_cs.py  plot_spectra.py
examples/02-const_cs/: const_cs_find.py
examples/03-standard_model/: plot_standard_model.py
examples/05-entropy/: GALLERY_HEADER.rst
examples/basic/: parallel.py
examples/const_cs/: GALLERY_HEADER.rst  const_cs_find.py  const_cs_gw.py  plot_const_cs_xi_v.py  plot_const_cs_xi_v_w.py
examples/e01_basic/: GALLERY_HEADER.rst  basic.py  parallel.py  plot_spectra.py
examples/e02_const_cs/: plot_const_cs_xi_v.py  plot_model_comparison.py
examples/e04_props/: plot_ke_frac.py  (+2 more)
gw_code/: README.txt  ssm.py  ssmtools.py
pttools/: __init__.py  logging.py  speedup.py  type_hints.py
ssmtools/: README.txt  ssmtools.py
tests/: __init__.py  printing.py  sigfig.py  ssm_compare.py  ssm_paper_utils.py  test_bubble.py  test_examples.py  test_performance.py  test_plane.py  test_pow_specs.py  test_prace.py  test_profile.py  test_shells.py  test_speedup.py  test_tables.py  test_utils.py  test_vplusminus.py  tests-conda.slrm  tests-python.slrm  tex_utils.py
vip_code/: Bag_Toolbox.py  EIKR_Toolbox.py  EIKR_Toolbox_Rewrite.py  Mechanics_Toolbox.py  Test_Toolbox.py  alt_shooting_method.py  bubble.py  find_epsilon.py  general_shooting_solution.py  model_comparison.py  new_general_shooting_solution.py  plot_thermo.py  plot_v_ln_T.py
(+219 files in other folders)
