[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# On clusters "--numprocesses=auto" creates processes according to the total number of CPU cores
# instead of the number of cores available to the job.
# Therefore it may be wise to set the number of processes manually.
addopts = "--alluredir=test-results/allure --cov=. --cov-report=html --cov-report=term --cov-report=term-missing --cov-report=xml --dist=loadscope --html=test-results/html/test-report.html --numprocesses=auto"
norecursedirs = "test_data"
# python_paths = "tests"
testpaths = [
    "tests"
]
# log_cli = true
# log_cli_level = "INFO"
