[metadata]
name = pttools-gw
version = 0.0.1
author = Mark Hindmarsh
author_email = mark.hindmarsh@helsinki.fi
description = Phase transitions in the early universe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hindmars-org/pttools
project_urls =
    Bug Tracker = https://github.com/hindmars-org/pttools/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: TODO
    Operating System :: OS Independent

[options]
install_requires =
    matplotlib
    numba
    numpy
    scipy
package_dir =
    = .
packages =
    pttools
    pttools.bubble
    pttools.omgw0
    pttools.speedup
    pttools.ssmtools
python_requires = >=3.6

[options.extras_require]
NumbaLSODA = NumbaLSODA
performance =
    icc-rt
    intel-openmp; sys_platform=="darwin"
    tbb
