[metadata]
name = pttools-gw
version = 0.0.1
author = Mark Hindmarsh
author_email = mark.hindmarsh@helsinki.fi
description = Phase transitions in the early universe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CFT-HY/pttools
project_urls =
    Bug Tracker = https://github.com/CFT-HY/pttools/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: TODO
    Operating System :: OS Independent

[options]
install_requires =
    h5py
    kaleido
    matplotlib
    numba
    numpy
    orjson
    plotly
    scipy
package_dir =
    = .
packages =
    pttools
    pttools.analysis
    pttools.models
    pttools.bubble
    pttools.speedup
    pttools.ssmtools
python_requires = >=3.9

[options.extras_require]
numbalsoda = numbalsoda
performance =
    icc-rt
    intel-openmp; sys_platform=="darwin"
    tbb
