[metadata]
name = pttools-gw
version = 0.0.1
author = Mark Hindmarsh
author_email = mark.hindmarsh@helsinki.fi
description = Phase transitions in the early universe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CFT-HY/pttools
project_urls =
    Bug Tracker = https://github.com/CFT-HY/pttools/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: TODO
    Operating System :: OS Independent

[options]
install_requires =
    h5py >= 3.10.0
    kaleido >= 0.2.1
    matplotlib >= 3.8.3
    numba >= 0.59.0
    numpy >= 1.26.4
    orjson >= 3.9.14
    plotly >= 5.19.0
    scipy >= 1.12.0
package_dir =
    = .
packages =
    pttools
    pttools.analysis
    pttools.models
    pttools.bubble
    pttools.speedup
    pttools.ssmtools
python_requires = >=3.9

[options.extras_require]
numbalsoda = numbalsoda
performance =
    icc-rt
    intel-openmp; sys_platform=="darwin"
    tbb
